--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.openmrs.module</groupId>
         <artifactId>etllite</artifactId>
-        <version>1.1.1-SNAPSHOT</version>
+        <version>1.1.1</version>
     </parent>
 
     <artifactId>etllite-omod</artifactId>
@@ -15,12 +15,12 @@
         <dependency>
             <groupId>org.openmrs.module</groupId>
             <artifactId>etllite-api</artifactId>
-            <version>1.1.1-SNAPSHOT</version>
+            <version>1.1.1</version>
         </dependency>
         <dependency>
             <groupId>org.openmrs.module</groupId>
             <artifactId>etllite-api</artifactId>
-            <version>1.1.1-SNAPSHOT</version>
+            <version>1.1.1</version>
             <scope>test</scope>
             <classifier>tests</classifier>
         </dependency>
