Make OWA build work on Windows
- added cross-env module

(cherry picked from commit 5c9f3dd170d65ae0b6856edca47f99ad26cc6b7b)

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>metadatasharing-api</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>uiframework-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
