--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,10 @@
         <javax.servlet.version>3.0.1</javax.servlet.version>
         <jacocoVersion>0.8.2</jacocoVersion>
         <surefireVersion>2.17</surefireVersion>
-        <checkStylePluginVersion>2.10</checkStylePluginVersion>
+        <checkStylePluginVersion>3.1.2</checkStylePluginVersion>
+        <checkStyleVersion>9.0.1</checkStyleVersion>
         <checkStylePluginSkip>false</checkStylePluginSkip>
-        <pmdPluginVersion>3.5</pmdPluginVersion>
+        <pmdPluginVersion>3.12.0</pmdPluginVersion>
         <pmdPluginSkip>false</pmdPluginSkip>
         <mssqlDriverVersion>7.4.1.jre8</mssqlDriverVersion>
         <metadatasharingVersion>1.6.0</metadatasharingVersion>
@@ -164,6 +165,13 @@
                         <includeTestSourceDirectory>true</includeTestSourceDirectory>
                         <skip>${checkStylePluginSkip}</skip>
                     </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>com.puppycrawl.tools</groupId>
+                            <artifactId>checkstyle</artifactId>
+                            <version>${checkStyleVersion}</version>
+                        </dependency>
+                    </dependencies>
                     <executions>
                         <execution>
                             <id>verify-checkstyle</id>
